Renamed MainActivity to HomeActivity
Signed-off-by: nirajk1190 <nirajk1190@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".HomActivity"
+            android:name=".HomeActivity"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".ContactsActivity"
